Разметка двух страниц

--- a/index.html
+++ b/index.html
@@ -5,8 +5,106 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+<header>
+  <div>
+  <ul>
+     <li><a href="">Техномарт</a></li>
+     <li><p>Поиск:</p><input type="search"></li>
+     <li><a href="">Закладки</a></li>
+     <li><a href="">Корзина</a></li>
+     <li><a href="">Оформить заказ</a></li>
+  </ul>
+  </div>
+  <div>
+   <ul>
+     <li><h1>Интернет-магазин<br>
+             строительных материалов<br>
+             и инструментов для ремонта </h1> </li>
+     <li> <p> +7 (812) 555-05-55</p></li>
+     <li> <p>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</p></li>
+     <li><button type="button">Вход</button></li>
+     <li><button type="button">Регистрация</button></li>
+  </ul>
+    <nav>
+  <ul>
+     <li><a href="index.html">Главная</a></li>
+     <li><a href="">Компания</a></li>
+     <li><a href="catalog.html">Каталог</a></li>
+     <li><a href="">Новости</a></li>
+     <li><a href="">Спецпредложения</a></li>
+     <li><a href="">Доставка</a></li>
+     <li><a href="">Контакты</a></li>
+  </ul>
+    </nav>
+  </div>
+</header>
+<main>
+<section>
+    <a href=""></a>
+   <h2>КОМПАНИЯ «ТЕХНОМАРТ» </h2>
+   <p>Настоящий мужской шоппинг начнинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастрабайтерах.</p>
+   <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+      Техномарт работает со многими транспортными компаниями: </p>
+   <ul>
+     <li>Деловые линии</li>
+     <li>Автотрейдинг</li>
+     <li>ЖелДорЭкспедиция</li>
+   </ul>
+<a href="">Подробнее о компании</a>
+</section>
+<section>
+    <h2>КОНТАКТЫ</h2>
+    <P>Вы можете забрать товар сами,<br>
+       заехав в наш офис:</P>
+       <img src="map.jpg" alt="Адресс на карте">
+       <button type="button">ЗАБЛУДИЛИСЬ?НАПИШИТЕ НАМ!</button>
+</section>
+</main>
+<footer>
+    <div>
+      <a href="">Техномарт</a>
+      <p>
+        г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9<br>
+        +7 (812) 555-05-55
+      </p>
+    </div>
+    <div>
+        <ul>
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </div>
+  <div>
+<div class="copyright">
+      <p>
+       © 2010-2016 Компания «Техномарт»<br>
+       Все права защищены
+      </p>
+</div>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+  <div class="social">
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+  </div>
 
+  <div class="communication">
+      <p>Обратная связь:<br>
+      <a href="">mail@htmlacademy.ru</a></p>
+      <p>Разработано-<br>
+      <a href="">htmlacademy.ru</a>
+      </p>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
