--- a/catalog.html
+++ b/catalog.html
@@ -23,3 +23,116 @@
      <li> <p> +7 (812) 555-05-55</p></li>
      <li> <p>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</p></li>
      <a href="">Равшан Джамшутович</a>
+     <a href="">Мои заказы</a>
+     <a href="">Личный кабинет</a>
+  </ul>
+    <nav>
+  <ul>
+     <li><a href="index.html">Главная</a></li>
+     <li><a href="">Компания</a></li>
+     <li><a href="catalog.html">Каталог</a></li>
+     <li><a href="">Новости</a></li>
+     <li><a href="">Спецпредложения</a></li>
+     <li><a href="">Доставка</a></li>
+     <li><a href="">Контакты</a></li>
+  </ul>
+    </nav>
+  </div>
+</header>
+<main>
+    <a href="">КАТАЛОГ</a>
+    <a href="">ИНСТРУМЕНТ</a>
+    <a href="">ПЕРФОРАТОРЫ</a>
+    <h2>ПЕРФОРАТОРЫ</h2>
+<div>
+<article>
+    <img src="PerforatorBF3" alt="Перфоратор BOSCH BFG 3000">
+    <p>Перфоратор BOSCH BFG 3000</p>
+    <p>22500 Р.</p>
+    <a>15500</a>
+    <button type="button">КУПИТЬ</button>
+    <button type="button">В ЗАКЛАДКИ</button>
+</article>
+
+<article>
+      <img src="PerforatorBFG6" alt="Перфоратор BOSCH BFG 6000">
+      <p>Перфоратор BOSCH BFG 6000</p>
+      <p>30500 Р.</p>
+      <a>25500</a>
+      <button type="button">КУПИТЬ</button>
+      <button type="button">В ЗАКЛАДКИ</button>
+</article>
+
+<article>
+      <img src="PerforatorBFG2" alt="Перфоратор BOSCH BFG 2000">
+      <p>Перфоратор BOSCH BFG 2000</p>
+      <a>12500</a>
+      <button type="button">КУПИТЬ</button>
+      <button type="button">В ЗАКЛАДКИ</button>
+</article>
+</div>
+  <div>
+    <h2>ПРОИЗВОДИТЕЛИ:</h2>
+  <ul>
+     <li>BOSH</li>
+     <li>ИНТЕРСКОЛ</li>
+     <li>MAKITA</li>
+     <li>DEWALT</li>
+     <li>HITACHI</li>
+  </ul>
+    <h2>ПИТАНИЕ:</h2>
+   <ul>
+     <li>АККУМУЛЯТОРНЫЕ</li>
+     <li>СЕТЕВЫЕ</li>
+   </ul>
+    <button type="button">Показать</button>
+  </div>
+</main>
+<footer>
+    <div>
+      <a href="">Техномарт</a>
+      <p>
+        г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9<br>
+        +7 (812) 555-05-55
+      </p>
+    </div>
+    <div>
+        <ul>
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </div>
+  <div>
+<div>
+      <p>
+       © 2010-2016 Компания «Техномарт»<br>
+       Все права защищены
+      </p>
+</div>
+
+  <div>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+  </div>
+
+  <div>
+      <p>Обратная связь:<br>
+      <a href="">mail@htmlacademy.ru</a></p>
+      <p>Разработано-<br>
+      <a href="">htmlacademy.ru</a>
+      </p>
+    </div>
+  </div>
+</footer>
+  </body>
+</html>
