--- a/catalog.html
+++ b/catalog.html
@@ -22,10 +22,10 @@
              и инструментов для ремонта </h1> </li>
      <li> <p> +7 (812) 555-05-55</p></li>
      <li> <p>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</p></li>
-     <a href="">Равшан Джамшутович</a>
-     <a href="">Мои заказы</a>
-     <a href="">Личный кабинет</a>
   </ul>
+  <a href="">Равшан Джамшутович</a>
+  <a href="">Мои заказы</a>
+  <a href="">Личный кабинет</a>
     <nav>
   <ul>
      <li><a href="index.html">Главная</a></li>
@@ -40,35 +40,35 @@
   </div>
 </header>
 <main>
-    <a href="">КАТАЛОГ</a>
-    <a href="">ИНСТРУМЕНТ</a>
-    <a href="">ПЕРФОРАТОРЫ</a>
-    <h2>ПЕРФОРАТОРЫ</h2>
+    <a href="">каталог</a>
+    <a href="">инструмент</a>
+    <a href="">перфораторы</a>
+    <h2>перфораторы</h2>
 <div>
 <article>
-    <img src="PerforatorBF3" alt="Перфоратор BOSCH BFG 3000">
-    <p>Перфоратор BOSCH BFG 3000</p>
-    <p>22500 Р.</p>
-    <a>15500</a>
-    <button type="button">КУПИТЬ</button>
-    <button type="button">В ЗАКЛАДКИ</button>
+    <img src="PerforatorBF3.jpg" alt="Перфоратор BOSCH BFG 3000">
+    <h3>Перфоратор BOSCH BFG 3000></h3>
+    <span>22500 Р.</span>
+      <span>15500</span>
+    <button type="button">купить</button>
+    <button type="button">в закладки</button>
 </article>
 
 <article>
-      <img src="PerforatorBFG6" alt="Перфоратор BOSCH BFG 6000">
-      <p>Перфоратор BOSCH BFG 6000</p>
-      <p>30500 Р.</p>
-      <a>25500</a>
-      <button type="button">КУПИТЬ</button>
-      <button type="button">В ЗАКЛАДКИ</button>
+      <img src="PerforatorBFG6.jpg" alt="Перфоратор BOSCH BFG 6000">
+      <h3>Перфоратор BOSCH BFG 6000</h3>
+      <span>30500 Р.</span>
+        <span>25500</span>
+      <button type="button">купить</button>
+      <button type="button">в закладки</button>
 </article>
 
 <article>
-      <img src="PerforatorBFG2" alt="Перфоратор BOSCH BFG 2000">
-      <p>Перфоратор BOSCH BFG 2000</p>
-      <a>12500</a>
-      <button type="button">КУПИТЬ</button>
-      <button type="button">В ЗАКЛАДКИ</button>
+      <img src="PerforatorBFG2.jpg" alt="Перфоратор BOSCH BFG 2000">
+      <h3>Перфоратор BOSCH BFG 2000 </h3>
+      <span>12500</span>
+      <button type="button">купить</button>
+      <button type="button">в закладки</button>
 </article>
 </div>
   <div>
@@ -82,8 +82,8 @@
   </ul>
     <h2>ПИТАНИЕ:</h2>
    <ul>
-     <li>АККУМУЛЯТОРНЫЕ</li>
-     <li>СЕТЕВЫЕ</li>
+     <li>аккумуляторные</li>
+     <li>сетевые</li>
    </ul>
     <button type="button">Показать</button>
   </div>
