--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <main>
 <section>
     <a href=""></a>
-   <h2>КОМПАНИЯ «ТЕХНОМАРТ» </h2>
+   <h2>Компания «Техномарт» </h2>
    <p>Настоящий мужской шоппинг начнинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастрабайтерах.</p>
    <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
       Техномарт работает со многими транспортными компаниями: </p>
@@ -57,7 +57,7 @@
     <P>Вы можете забрать товар сами,<br>
        заехав в наш офис:</P>
        <img src="map.jpg" alt="Адресс на карте">
-       <button type="button">ЗАБЛУДИЛИСЬ?НАПИШИТЕ НАМ!</button>
+       <button type="button">Заблудились?Напишите нам!</button>
 </section>
 </main>
 <footer>
