--- a/catalog.html
+++ b/catalog.html
@@ -7,13 +7,11 @@
   <body>
 <header>
   <div>
-  <ul>
-     <li><a href="">Техномарт</a></li>
-     <li><p>Поиск:</p><input type="search"></li>
-     <li><a href="">Закладки</a></li>
-     <li><a href="">Корзина</a></li>
-     <li><a href="">Оформить заказ</a></li>
-  </ul>
+    <a href="#">Техномарт</a></li>
+    <form><input type="search"  placeholder="Поиск:"></form>
+     <a href="#">Закладки</a></li>
+     <a href="#">Корзина</a></li<a>
+     <a href="#">Оформить заказ</a>
   </div>
   <div>
    <ul>
@@ -23,30 +21,35 @@
      <li> <p> +7 (812) 555-05-55</p></li>
      <li> <p>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</p></li>
   </ul>
-  <a href="">Равшан Джамшутович</a>
-  <a href="">Мои заказы</a>
-  <a href="">Личный кабинет</a>
-    <nav>
+  <ul>
+  <li><a href="">Равшан Джамшутович</a></li>
+  </ul>
+  <ul>
+  <li><a href="">Мои заказы</a></li>
+  <li><a href="">Личный кабинет</a></li>
+  </ul>
+  <nav>
   <ul>
      <li><a href="index.html">Главная</a></li>
-     <li><a href="">Компания</a></li>
+     <li><a href="#">Компания</a></li>
      <li><a href="catalog.html">Каталог</a></li>
-     <li><a href="">Новости</a></li>
-     <li><a href="">Спецпредложения</a></li>
-     <li><a href="">Доставка</a></li>
-     <li><a href="">Контакты</a></li>
+     <li><a href="#">Новости</a></li>
+     <li><a href="#">Спецпредложения</a></li>
+     <li><a href="#">Доставка</a></li>
+     <li><a href="#">Контакты</a></li>
   </ul>
     </nav>
   </div>
 </header>
 <main>
-    <a href="">каталог</a>
-    <a href="">инструмент</a>
-    <a href="">перфораторы</a>
+    <a href="#">каталог</a>
+    <a href="#">инструмент</a>
+    <a href="#">перфораторы</a>
     <h2>перфораторы</h2>
 <div>
+  <section>
 <article>
-    <img src="PerforatorBF3.jpg" alt="Перфоратор BOSCH BFG 3000">
+    <img src="perforatorbf3.jpg" alt="Перфоратор BOSCH BFG 3000">
     <h3>Перфоратор BOSCH BFG 3000></h3>
     <span>22500 Р.</span>
       <span>15500</span>
@@ -55,7 +58,7 @@
 </article>
 
 <article>
-      <img src="PerforatorBFG6.jpg" alt="Перфоратор BOSCH BFG 6000">
+      <img src="perforatorbfg6.jpg" alt="Перфоратор BOSCH BFG 6000">
       <h3>Перфоратор BOSCH BFG 6000</h3>
       <span>30500 Р.</span>
         <span>25500</span>
@@ -64,15 +67,16 @@
 </article>
 
 <article>
-      <img src="PerforatorBFG2.jpg" alt="Перфоратор BOSCH BFG 2000">
+      <img src="perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
       <h3>Перфоратор BOSCH BFG 2000 </h3>
       <span>12500</span>
       <button type="button">купить</button>
       <button type="button">в закладки</button>
 </article>
+</section>
 </div>
   <div>
-    <h2>ПРОИЗВОДИТЕЛИ:</h2>
+    <h2>Производители:</h2>
   <ul>
      <li>BOSH</li>
      <li>ИНТЕРСКОЛ</li>
@@ -90,25 +94,25 @@
 </main>
 <footer>
     <div>
-      <a href="">Техномарт</a>
-      <p>
-        г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9<br>
-        +7 (812) 555-05-55
-      </p>
+      <a href="#">Техномарт</a>
+          <div>
+          <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+          <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+          </div>
     </div>
     <div>
         <ul>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <ul>
-          <li><a href="">Материалы</a></li>
-          <li><a href="">Техника</a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a href="">Спецпредложения</a></li>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
         </ul>
       </div>
   <div>
@@ -120,9 +124,11 @@
 </div>
 
   <div>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+    <ul>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    </ul>
   </div>
 
   <div>
