--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
   <body>
 <header>
   <div>
-  <ul>
-     <li><a href="">Техномарт</a></li>
-     <li><p>Поиск:</p><input type="search"></li>
-     <li><a href="">Закладки</a></li>
-     <li><a href="">Корзина</a></li>
-     <li><a href="">Оформить заказ</a></li>
-  </ul>
+
+     <a href="#">Техномарт</a></li>
+    <form><input type="search"  placeholder="Поиск:"></form>
+     <a href="#">Закладки</a></li>
+     <a href="#">Корзина</a></li<a>
+     <a href="#">Оформить заказ</a>
+
   </div>
   <div>
    <ul>
-     <li><h1>Интернет-магазин<br>
-             строительных материалов<br>
-             и инструментов для ремонта </h1> </li>
-     <li> <p> +7 (812) 555-05-55</p></li>
-     <li> <p>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</p></li>
-     <li><button type="button">Вход</button></li>
-     <li><button type="button">Регистрация</button></li>
+    <h1>Интернет-магазин
+             строительных материалов
+             и инструментов для ремонта </h1>
+     <div><a href="tel:+8125550555">+7 (812) 555-05-55</a>
+     <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address></div>
+     <button type="button">Вход</button>
+     <button type="button">Регистрация</button>
   </ul>
     <nav>
   <ul>
      <li><a href="index.html">Главная</a></li>
-     <li><a href="">Компания</a></li>
+     <li><a href="#">Компания</a></li>
      <li><a href="catalog.html">Каталог</a></li>
-     <li><a href="">Новости</a></li>
-     <li><a href="">Спецпредложения</a></li>
-     <li><a href="">Доставка</a></li>
-     <li><a href="">Контакты</a></li>
+     <li><a href="#">Новости</a></li>
+     <li><a href="#">Спецпредложения</a></li>
+     <li><a href="#">Доставка</a></li>
+     <li><a href="#">Контакты</a></li>
   </ul>
     </nav>
   </div>
@@ -43,7 +43,7 @@
     <a href=""></a>
    <h2>Компания «Техномарт» </h2>
    <p>Настоящий мужской шоппинг начнинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастрабайтерах.</p>
-   <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+   <p>Мы можем доставить ваш товар в самые отдаленные точки России!
       Техномарт работает со многими транспортными компаниями: </p>
    <ul>
      <li>Деловые линии</li>
@@ -54,7 +54,7 @@
 </section>
 <section>
     <h2>КОНТАКТЫ</h2>
-    <P>Вы можете забрать товар сами,<br>
+    <P>Вы можете забрать товар сами,
        заехав в наш офис:</P>
        <img src="map.jpg" alt="Адресс на карте">
        <button type="button">Заблудились?Напишите нам!</button>
@@ -62,47 +62,48 @@
 </main>
 <footer>
     <div>
-      <a href="">Техномарт</a>
+      <a href="#">Техномарт</a>
       <p>
-        г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9<br>
+        г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9
         +7 (812) 555-05-55
       </p>
     </div>
     <div>
         <ul>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <ul>
-          <li><a href="">Материалы</a></li>
-          <li><a href="">Техника</a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a href="">Спецпредложения</a></li>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
         </ul>
       </div>
   <div>
 <div class="copyright">
       <p>
-       © 2010-2016 Компания «Техномарт»<br>
+       © 2010-2016 Компания «Техномарт»
        Все права защищены
       </p>
 </div>
 
   <div class="social">
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+   <ul>
+     <li><a href="#"></a></li>
+     <li><a href="#"></a></li>
+     <li><a href="#"></a></li>
+   </ul>
   </div>
 
-  <div class="communication">
+    <div class="communication">
       <p>Обратная связь:<br>
-      <a href="">mail@htmlacademy.ru</a></p>
-      <p>Разработано-<br>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+      <p>Разработано-</p>
       <a href="">htmlacademy.ru</a>
-      </p>
     </div>
   </div>
 </footer>
