--- a/catalog.html
+++ b/catalog.html
@@ -13,14 +13,15 @@
      <a href="#">Корзина</a></li<a>
      <a href="#">Оформить заказ</a>
   </div>
-  <div>
-   <ul>
-     <li><h1>Интернет-магазин<br>
-             строительных материалов<br>
-             и инструментов для ремонта </h1> </li>
-     <li> <p> +7 (812) 555-05-55</p></li>
-     <li> <p>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</p></li>
-  </ul>
+     <h1
+        >Интернет-магазин
+         строительных материалов
+         и инструментов для ремонта
+     </h1>
+   <div>
+      <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+      <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+   </div>
   <ul>
   <li><a href="">Равшан Джамшутович</a></li>
   </ul>
@@ -78,13 +79,13 @@
   <div>
     <h2>Производители:</h2>
   <ul>
-     <li>BOSH</li>
-     <li>ИНТЕРСКОЛ</li>
-     <li>MAKITA</li>
-     <li>DEWALT</li>
-     <li>HITACHI</li>
+     <li>bosh</li>
+     <li>интерскол</li>
+     <li>makita</li>
+     <li>dewalt</li>
+     <li>hitachi</li>
   </ul>
-    <h2>ПИТАНИЕ:</h2>
+    <h2>питание:</h2>
    <ul>
      <li>аккумуляторные</li>
      <li>сетевые</li>
@@ -115,30 +116,28 @@
           <li><a href="#">Спецпредложения</a></li>
         </ul>
       </div>
-  <div>
 <div>
       <p>
-       © 2010-2016 Компания «Техномарт»<br>
+       © 2010-2016 Компания «Техномарт»
        Все права защищены
       </p>
 </div>
-
-  <div>
-    <ul>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    </ul>
-  </div>
-
-  <div>
-      <p>Обратная связь:<br>
-      <a href="">mail@htmlacademy.ru</a></p>
-      <p>Разработано-<br>
-      <a href="">htmlacademy.ru</a>
-      </p>
-    </div>
-  </div>
+<div>
+    <p>
+     © 2010-2016 Компания «Техномарт»
+     Все права защищены
+    </p>
+ <ul>
+   <li><a href="#"></a></li>
+   <li><a href="#"></a></li>
+   <li><a href="#"></a></li>
+ </ul>
+    <p>Обратная связь:</p>
+    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    </p>
+    <p>Разработано-</p>
+    <a href="№">htmlacademy.ru</a>
+</div>
 </footer>
   </body>
 </html>
