--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
      <a href="#">Оформить заказ</a>
 
   </div>
-  <div>
-   <ul>
     <h1>Интернет-магазин
-             строительных материалов
-             и инструментов для ремонта </h1>
-     <div><a href="tel:+8125550555">+7 (812) 555-05-55</a>
-     <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address></div>
-     <button type="button">Вход</button>
-     <button type="button">Регистрация</button>
-  </ul>
+        строительных материалов
+        и инструментов для ремонта </h1>
+
+       <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+       <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+       <ul>
+       <li><button type="button">Вход</button></li>
+       <li><button type="button">Регистрация</button></li>
+      </ul>
     <nav>
   <ul>
      <li><a href="index.html">Главная</a></li>
@@ -62,11 +62,9 @@
 </main>
 <footer>
     <div>
-      <a href="#">Техномарт</a>
-      <p>
-        г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9
-        +7 (812) 555-05-55
-      </p>
+        <a href="#">Техномарт</a>
+        <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+        <a href="tel:+8125550555">+7 (812) 555-05-55</a>
     </div>
     <div>
         <ul>
@@ -83,28 +81,21 @@
           <li><a href="#">Спецпредложения</a></li>
         </ul>
       </div>
-  <div>
-<div class="copyright">
+   <div>
       <p>
        © 2010-2016 Компания «Техномарт»
        Все права защищены
       </p>
-</div>
-
-  <div class="social">
    <ul>
      <li><a href="#"></a></li>
      <li><a href="#"></a></li>
      <li><a href="#"></a></li>
    </ul>
-  </div>
-
-    <div class="communication">
-      <p>Обратная связь:<br>
-      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+      <p>Обратная связь:</p>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
       <p>Разработано-</p>
-      <a href="">htmlacademy.ru</a>
-    </div>
+      <a href="№">htmlacademy.ru</a>
   </div>
 </footer>
   </body>
