Исправил исправленые исправления

--- a/catalog.html
+++ b/catalog.html
@@ -1,143 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-<header>
-  <div>
-    <a href="#">Техномарт</a></li>
-    <form><input type="search"  placeholder="Поиск:"></form>
-     <a href="#">Закладки</a></li>
-     <a href="#">Корзина</a></li<a>
-     <a href="#">Оформить заказ</a>
-  </div>
-     <h1
-        >Интернет-магазин
-         строительных материалов
-         и инструментов для ремонта
-     </h1>
-   <div>
-      <a href="tel:+8125550555">+7 (812) 555-05-55</a>
-      <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
-   </div>
-  <ul>
-  <li><a href="">Равшан Джамшутович</a></li>
-  </ul>
-  <ul>
-  <li><a href="">Мои заказы</a></li>
-  <li><a href="">Личный кабинет</a></li>
-  </ul>
-  <nav>
-  <ul>
-     <li><a href="index.html">Главная</a></li>
-     <li><a href="#">Компания</a></li>
-     <li><a href="catalog.html">Каталог</a></li>
-     <li><a href="#">Новости</a></li>
-     <li><a href="#">Спецпредложения</a></li>
-     <li><a href="#">Доставка</a></li>
-     <li><a href="#">Контакты</a></li>
-  </ul>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
+
+<body>
+  <header>
+    <div>
+      <a href="#">Техномарт</a></li>
+      <form><input type="search" placeholder="Поиск:"></form>
+      <a href="#">Закладки</a></li>
+      <a href="#">Корзина</a></li<a>
+      <a href="#">Оформить заказ</a>
+    </div>
+    <h1>
+      Интернет-магазин
+      строительных материалов
+      и инструментов для ремонта
+    </h1>
+    <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+    <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+    <ul>
+      <li><button type="button">Равшан Джамшутович</button></li>
+    </ul>
+    <ul>
+      <li><button type="button">Мои заказы</button></li>
+      <li><button type="button">Личный кабинет</button></li>
+    </ul>
+    <nav>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
     </nav>
-  </div>
-</header>
-<main>
+    </div>
+  </header>
+  <main>
     <a href="#">каталог</a>
     <a href="#">инструмент</a>
     <a href="#">перфораторы</a>
     <h2>перфораторы</h2>
-<div>
-  <section>
-<article>
-    <img src="perforatorbf3.jpg" alt="Перфоратор BOSCH BFG 3000">
-    <h3>Перфоратор BOSCH BFG 3000></h3>
-    <span>22500 Р.</span>
-      <span>15500</span>
-    <button type="button">купить</button>
-    <button type="button">в закладки</button>
-</article>
-
-<article>
-      <img src="perforatorbfg6.jpg" alt="Перфоратор BOSCH BFG 6000">
-      <h3>Перфоратор BOSCH BFG 6000</h3>
-      <span>30500 Р.</span>
-        <span>25500</span>
-      <button type="button">купить</button>
-      <button type="button">в закладки</button>
-</article>
-
-<article>
-      <img src="perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
-      <h3>Перфоратор BOSCH BFG 2000 </h3>
-      <span>12500</span>
-      <button type="button">купить</button>
-      <button type="button">в закладки</button>
-</article>
-</section>
-</div>
-  <div>
-    <h2>Производители:</h2>
-  <ul>
-     <li>bosh</li>
-     <li>интерскол</li>
-     <li>makita</li>
-     <li>dewalt</li>
-     <li>hitachi</li>
-  </ul>
-    <h2>питание:</h2>
-   <ul>
-     <li>аккумуляторные</li>
-     <li>сетевые</li>
-   </ul>
-    <button type="button">Показать</button>
-  </div>
-</main>
-<footer>
     <div>
-      <a href="#">Техномарт</a>
-          <div>
-          <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
-          <a href="tel:+8125550555">+7 (812) 555-05-55</a>
-          </div>
+      <section>
+        <article>
+          <img src="perforatorbf3.jpg" alt="Перфоратор BOSCH BFG 3000">
+          <h3>Перфоратор BOSCH BFG 3000></h3>
+          <span>22500 Р.</span>
+          <span>15500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+
+        <article>
+          <img src="perforatorbfg6.jpg" alt="Перфоратор BOSCH BFG 6000">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <span>30500 Р.</span>
+          <span>25500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+
+        <article>
+          <img src="perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+          <h3>Перфоратор BOSCH BFG 2000 </h3>
+          <span>12500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+      </section>
     </div>
     <div>
-        <ul>
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Техника</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-        </ul>
+      <h2>Производители:</h2>
+      <ul>
+        <li>bosh</li>
+        <li>интерскол</li>
+        <li>makita</li>
+        <li>dewalt</li>
+        <li>hitachi</li>
+      </ul>
+      <h2>питание:</h2>
+      <ul>
+        <li>аккумуляторные</li>
+        <li>сетевые</li>
+      </ul>
+      <button type="button">Показать</button>
+    </div>
+  </main>
+  <footer>
+    <div>
+      <a href="#">Техномарт</a>
+      <div>
+        <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+        <a href="tel:+8125550555">+7 (812) 555-05-55</a>
       </div>
-<div>
+    </div>
+    <div>
+      <ul>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div>
       <p>
-       © 2010-2016 Компания «Техномарт»
-       Все права защищены
+        © 2010-2016 Компания «Техномарт»
+        Все права защищены
       </p>
-</div>
-<div>
-    <p>
-     © 2010-2016 Компания «Техномарт»
-     Все права защищены
-    </p>
- <ul>
-   <li><a href="#"></a></li>
-   <li><a href="#"></a></li>
-   <li><a href="#"></a></li>
- </ul>
-    <p>Обратная связь:</p>
-    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-    </p>
-    <p>Разработано-</p>
-    <a href="№">htmlacademy.ru</a>
-</div>
-</footer>
-  </body>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+      <p>Обратная связь:</p>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p>Разработано-</p>
+      <a href="№">htmlacademy.ru</a>
+    </div>
+  </footer>
+</body>
+
 </html>
