--- a/index.html
+++ b/index.html
@@ -1,102 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-<header>
-  <div>
 
-     <a href="#">Техномарт</a></li>
-    <form><input type="search"  placeholder="Поиск:"></form>
-     <a href="#">Закладки</a></li>
-     <a href="#">Корзина</a></li<a>
-     <a href="#">Оформить заказ</a>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
 
-  </div>
-    <h1>Интернет-магазин
-        строительных материалов
-        и инструментов для ремонта </h1>
-
-       <a href="tel:+8125550555">+7 (812) 555-05-55</a>
-       <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
-       <ul>
-       <li><button type="button">Вход</button></li>
-       <li><button type="button">Регистрация</button></li>
-      </ul>
-    <nav>
-  <ul>
-     <li><a href="index.html">Главная</a></li>
-     <li><a href="#">Компания</a></li>
-     <li><a href="catalog.html">Каталог</a></li>
-     <li><a href="#">Новости</a></li>
-     <li><a href="#">Спецпредложения</a></li>
-     <li><a href="#">Доставка</a></li>
-     <li><a href="#">Контакты</a></li>
-  </ul>
-    </nav>
-  </div>
-</header>
-<main>
-<section>
-    <a href=""></a>
-   <h2>Компания «Техномарт» </h2>
-   <p>Настоящий мужской шоппинг начнинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастрабайтерах.</p>
-   <p>Мы можем доставить ваш товар в самые отдаленные точки России!
-      Техномарт работает со многими транспортными компаниями: </p>
-   <ul>
-     <li>Деловые линии</li>
-     <li>Автотрейдинг</li>
-     <li>ЖелДорЭкспедиция</li>
-   </ul>
-<a href="">Подробнее о компании</a>
-</section>
-<section>
-    <h2>КОНТАКТЫ</h2>
-    <P>Вы можете забрать товар сами,
-       заехав в наш офис:</P>
-       <img src="map.jpg" alt="Адресс на карте">
-       <button type="button">Заблудились?Напишите нам!</button>
-</section>
-</main>
-<footer>
+<body>
+  <header>
     <div>
-        <a href="#">Техномарт</a>
-        <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
-        <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+      <a href="#">Техномарт</a></li>
+      <form><input type="search" placeholder="Поиск:"></form>
+      <a href="#">Закладки</a></li>
+      <a href="#">Корзина</a></li<a>
+      <a href="#">Оформить заказ</a>
+    </div>
+    <h1>
+      Интернет-магазин
+      строительных материалов
+      и инструментов для ремонта
+    </h1>
+    <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+    <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+    <ul>
+      <li><button type="button">Вход</button></li>
+      <li><button type="button">Регистрация</button></li>
+    </ul>
+    <nav>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+    </div>
+  </header>
+  <main>
+    <section>
+      <a href=""></a>
+      <h2>Компания «Техномарт» </h2>
+      <p>Настоящий мужской шоппинг начнинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
+        равнодушными любителей сэкономить на гастрабайтерах.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+        Техномарт работает со многими транспортными компаниями: </p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a href="">Подробнее о компании</a>
+    </section>
+    <section>
+      <h2>Контакты</h2>
+      <p>Вы можете забрать товар сами,
+        заехав в наш офис:</p>
+      <img src="map.jpg" alt="Адресс на карте">
+      <button type="button">Заблудились?Напишите нам!</button>
+    </section>
+  </main>
+  <footer>
+    <div>
+      <a href="#">Техномарт</a>
+      <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+      <a href="tel:+8125550555">+7 (812) 555-05-55</a>
     </div>
     <div>
-        <ul>
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Техника</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-        </ul>
-      </div>
-   <div>
+      <ul>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div>
       <p>
-       © 2010-2016 Компания «Техномарт»
-       Все права защищены
+        © 2010-2016 Компания «Техномарт»
+        Все права защищены
       </p>
-   <ul>
-     <li><a href="#"></a></li>
-     <li><a href="#"></a></li>
-     <li><a href="#"></a></li>
-   </ul>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
       <p>Обратная связь:</p>
       <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       </p>
       <p>Разработано-</p>
       <a href="№">htmlacademy.ru</a>
-  </div>
-</footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
