Личный проект: дополняем разметку

--- a/catalog.html
+++ b/catalog.html
@@ -48,6 +48,16 @@
     <a href="#">перфораторы</a>
     <h2>перфораторы</h2>
     <div>
+      <p>Сортировка:</p>
+      <ul>
+        <li><a href="">по цене</a></li>
+        <li><a href="">по типу</a></li>
+        <li><a href="">по функционалу</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
+    <div>
       <section>
         <article>
           <img src="perforatorbf3.jpg" alt="Перфоратор BOSCH BFG 3000">
@@ -74,7 +84,20 @@
           <button type="button">купить</button>
           <button type="button">в закладки</button>
         </article>
+
+        <ul>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">Следующая</a></li>
+        </ul>
       </section>
+    </div>
+    <div>
+      <p>Фильтр:</p>
+      <p>Цена:</p>
+    </div>
+    <div class="price-controls">
     </div>
     <div>
       <h2>Производители:</h2>
@@ -92,6 +115,17 @@
       </ul>
       <button type="button">Показать</button>
     </div>
+    <section>
+      <h2>Пара слов о перфораторах</h2>
+      <p>
+        Перфоратор-универсальный строительный инструмент. Предназначен для сверления и долбления отверстия в кирпиче,
+        бетоне и камне.
+        существует электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
+        шуруповерта и отбойного молотка. В
+        асортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная
+        дрель.
+      </p>
+    </section>
   </main>
   <footer>
     <div>
