--- a/index.html
+++ b/index.html
@@ -41,6 +41,119 @@
   </header>
   <main>
     <section>
+      <div>
+        <span>Материалы</span>
+        <span>На любой вкус</span>
+      </div>
+
+      <div>
+        <span>Инструмент</span>
+        <span>На все случаи</span>
+      </div>
+
+      <div>
+        <span>Техника</span>
+        <span>для стройки</span>
+      </div>
+
+      <div>
+        <span>Скидки 50%</span>
+        <span>На 350 товаров</span>
+      </div>
+
+      <div>
+        <span>Доставка</span>
+        <span>Бесплатно</span>
+      </div>
+
+      <figure>
+        <figcaption><span>Дрели<span>Соседями на радость</figcaption>
+        <button type="button"></button>
+        <button type="button"></button>
+        <a href="#">Открыть каталог</a>
+      </figure>
+    </section>
+
+    <section>
+      <h2>Популярные товары</h2>
+      <a href="#">Все популярные товары</a>
+      <div>
+
+        <article>
+          <img src="perforatorbf9.jpg" alt="">
+          <h3>Перфоратор BOSCH BFG 9000></h3>
+          <span>32500 Р.</span>
+          <span>25500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+
+        <article>
+          <img src="perforatorbf3.jpg" alt="">
+          <h3>Перфоратор BOSCH BFG 3000></h3>
+          <span>22500 Р.</span>
+          <span>15500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+
+        <article>
+          <img src="perforatorbfg6.jpg" alt="">
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <span>30500 Р.</span>
+          <span>25500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+
+        <article>
+          <img src="perforatorbfg2.jpg" alt="">
+          <h3>Перфоратор BOSCH BFG 2000 </h3>
+          <span>12500</span>
+          <button type="button">купить</button>
+          <button type="button">в закладки</button>
+        </article>
+
+      </div>
+    </section>
+
+    <section>
+      <h2>Популярные производители</h2>
+      <a href="#">Все производители</a>
+      <figure class="Manufacturers">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </figure>
+    </section>
+
+    <section>
+      <h2>Сервисы</h2>
+      <p>
+        Хороший интернет-магазин отличается от плохого не только ценами!
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+      </p>
+      <div>
+        <button type="button">Доставка</button>
+        <button type="button">Гарантия</button>
+        <button type="button">Кредит</button>
+      </div>
+      <h3>Доставка</h3>
+      <p>
+        Мы с удовольствием доставим ваш товар прямо
+        к вашему подъезду совершенно бесплатно!
+        ведь мы неплохо заработем,
+        поднимая его на ваш этаж!
+      </p>
+      </div>
+    </section>
+
+    <section>
       <a href=""></a>
       <h2>Компания «Техномарт» </h2>
       <p>Настоящий мужской шоппинг начнинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
