--- a/catalog.html
+++ b/catalog.html
@@ -7,23 +7,30 @@
 </head>
 
 <body>
-  <header>
-    <div>
-      <a href="#">Техномарт</a></li>
-      <form><input type="search" placeholder="Поиск:"></form>
-      <a href="#">Закладки</a></li>
-      <a href="#">Корзина</a></li<a>
-      <a href="#">Оформить заказ</a>
-    </div>
-    <h1>
-      Интернет-магазин
-      строительных материалов
-      и инструментов для ремонта
-    </h1>
-    <a href="tel:+8125550555">+7 (812) 555-05-55</a>
-    <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+    <header>
+        <div>
+          <a href="#">Техномарт</a>
+          <img src="img/icon-search.svg" width="15" height="15" alt="">
+          <form><input type="search" placeholder="Поиск:"></form>
+          <img src="img/icon-bookmark.svg" width="15" height="15" alt="">
+          <a href="#">Закладки</a>
+          <img src="img/icon-cart.svg" width="15" height="15" alt="">
+          <a href="#">Корзина</a>
+          <a href="#">Оформить заказ</a>
+        </div>
+        <h1>
+          Интернет-магазин
+          строительных материалов
+          и инструментов для ремонта
+        </h1>
+        <img src="img/icon-phone.svg" width="15" height="15" alt="">
+        <a href="tel:+8125550555">+7 (812) 555-05-55</a>
+        <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
     <ul>
-      <li><button type="button">Равшан Джамшутович</button></li>
+      <li>
+        <img src="img/icon-user.svg" width="15" height="15" alt="">
+        <button type="button">Равшан Джамшутович</button></li>
+        <img src="img/icon-logout.svg" width="15" height="15" alt="">
     </ul>
     <ul>
       <li><button type="button">Мои заказы</button></li>
@@ -43,6 +50,7 @@
     </div>
   </header>
   <main>
+      <img src="img/icon-home.svg" width="15" height="15" alt="">
     <a href="#">каталог</a>
     <a href="#">инструмент</a>
     <a href="#">перфораторы</a>
@@ -60,7 +68,7 @@
     <div>
       <section>
         <article>
-          <img src="perforatorbf3.jpg" alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/Perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH BFG 3000></h3>
           <span>22500 Р.</span>
           <span>15500</span>
@@ -69,7 +77,7 @@
         </article>
 
         <article>
-          <img src="perforatorbfg6.jpg" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <span>25500</span>
@@ -78,7 +86,8 @@
         </article>
 
         <article>
-          <img src="perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/newflag.png" width="60" height="59" alt="Новое">
+          <img src="img/Perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
           <h3>Перфоратор BOSCH BFG 2000 </h3>
           <span>12500</span>
           <button type="button">купить</button>
@@ -156,9 +165,18 @@
         Все права защищены
       </p>
       <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+          <li>
+              <a href="#"></a>
+              <img src="img/vk-icon.svg" width="15" height="15" alt="">
+            </li>
+            <li>
+              <a href="#"></a>
+              <img src="img/fb-icon.svg" width="15" height="15" alt="">
+            </li>
+            <li>
+              <a href="#"></a>
+              <img src="img/insta-icon.svg" width="15" height="15" alt="">
+            </li>
       </ul>
       <p>Обратная связь:</p>
       <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
