--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
   <header>
     <div>
-      <a href="#">Техномарт</a></li>
+      <a href="#">Техномарт</a>
+      <img src="img/icon-search.svg" width="15" height="15" alt="">
       <form><input type="search" placeholder="Поиск:"></form>
-      <a href="#">Закладки</a></li>
-      <a href="#">Корзина</a></li<a>
+      <img src="img/icon-bookmark.svg" width="15" height="15" alt="">
+      <a href="#">Закладки</a>
+      <img src="img/icon-cart.svg" width="15" height="15" alt="">
+      <a href="#">Корзина</a>
       <a href="#">Оформить заказ</a>
     </div>
     <h1>
@@ -20,10 +23,14 @@
       строительных материалов
       и инструментов для ремонта
     </h1>
+    <img src="img/icon-phone.svg" width="15" height="15" alt="">
     <a href="tel:+8125550555">+7 (812) 555-05-55</a>
     <address>г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
     <ul>
-      <li><button type="button">Вход</button></li>
+      <li>
+        <img src="img/icon-login.svg" width="15" height="15" alt="">
+        <button type="button">Вход</button>
+      </li>
       <li><button type="button">Регистрация</button></li>
     </ul>
     <nav>
@@ -171,7 +178,7 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами,
         заехав в наш офис:</p>
-      <img src="map.jpg" alt="Адресс на карте">
+      <img src="img/map-steeat.jpg" width="300" height="161" alt="Большая Конюшенная ул., 19">
       <button type="button">Заблудились?Напишите нам!</button>
     </section>
   </main>
@@ -202,9 +209,18 @@
         Все права защищены
       </p>
       <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li>
+          <a href="#"></a>
+          <img src="img/vk-icon.svg" width="15" height="15" alt="">
+        </li>
+        <li>
+          <a href="#"></a>
+          <img src="img/fb-icon.svg" width="15" height="15" alt="">
+        </li>
+        <li>
+          <a href="#"></a>
+          <img src="img/insta-icon.svg" width="15" height="15" alt="">
+        </li>
       </ul>
       <p>Обратная связь:</p>
       <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
