--- a/index.html
+++ b/index.html
@@ -51,29 +51,36 @@
       <div>
         <span>Материалы</span>
         <span>На любой вкус</span>
+        <img src="img/icon-paint.svg" width="44" height="65" alt="">
+        <img src="img/newflag.png" width="60" height="59" alt="Новое">
       </div>
 
       <div>
         <span>Инструмент</span>
         <span>На все случаи</span>
+        <img src="img/icon-drill.svg" width="44" height="65" alt="">
       </div>
 
       <div>
         <span>Техника</span>
         <span>для стройки</span>
+        <img src="img/icon-tractor.svg" width="44" height="65" alt="">
       </div>
 
       <div>
         <span>Скидки 50%</span>
         <span>На 350 товаров</span>
+        <img src="img/icon-big-cart.svg" width="44" height="65" alt="">
       </div>
 
       <div>
         <span>Доставка</span>
         <span>Бесплатно</span>
+        <img src="img/icon-car.svg" width="44" height="65" alt="">
       </div>
 
       <figure>
+        <img src="img/work-man.jpg" width="620" height="266" alt="Перфоратор BOSCH BFG 9000">
         <figcaption><span>Дрели<span>Соседями на радость</figcaption>
         <button type="button"></button>
         <button type="button"></button>
@@ -87,7 +94,7 @@
       <div>
 
         <article>
-          <img src="perforatorbf9.jpg" alt="">
+            <img src="img/Perforatorbfg9.jpg" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 9000></h3>
           <span>32500 Р.</span>
           <span>25500</span>
@@ -96,7 +103,7 @@
         </article>
 
         <article>
-          <img src="perforatorbf3.jpg" alt="">
+            <img src="img/Perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH BFG 3000></h3>
           <span>22500 Р.</span>
           <span>15500</span>
@@ -105,7 +112,7 @@
         </article>
 
         <article>
-          <img src="perforatorbfg6.jpg" alt="">
+            <img src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <span>25500</span>
@@ -114,7 +121,8 @@
         </article>
 
         <article>
-          <img src="perforatorbfg2.jpg" alt="">
+            <img src="img/Perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/newflag.png" width="60" height="59" alt="Новое">
           <h3>Перфоратор BOSCH BFG 2000 </h3>
           <span>12500</span>
           <button type="button">купить</button>
@@ -128,14 +136,14 @@
       <h2>Популярные производители</h2>
       <a href="#">Все производители</a>
       <figure class="Manufacturers">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+          <img src="img/bosch.jpg" width="126" height="37" alt="bosch">
+          <img src="img/Makita.jpg" width="123" height="40" alt="Makita">
+          <img src="img/DeWALT.jpg" width="146" height="44" alt="DeWALT">
+          <img src="img/Интерскол.jpg" width="200" height="88" alt="Интерскол">
+          <img src="img/Hitachi.jpg" width="169" height="31" alt="Hitachi">
+          <img src="img/LG.jpg" width="121" height="73" alt="LG">
+          <img src="img/AEG.jpg" width="151" height="96" alt="AEG">
+          <img src="img/Metabo.jpg" width="204" height="69" alt="Metabo">
       </figure>
     </section>
 
@@ -157,6 +165,7 @@
         ведь мы неплохо заработем,
         поднимая его на ваш этаж!
       </p>
+      <img src="img/big-car.png" width="468" height="261" alt="Доставка">
       </div>
     </section>
 
