--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
 </head>
-
 <body>
   <header>
     <div>
       <a href="#">Техномарт</a>
       <img src="img/icon-search.svg" width="15" height="15" alt="">
-      <form><input type="search" placeholder="Поиск:"></form>
+      <form>
+        <input type="search" placeholder="Поиск:">
+      </form>
       <img src="img/icon-bookmark.svg" width="15" height="15" alt="">
       <a href="#">Закладки</a>
       <img src="img/icon-cart.svg" width="15" height="15" alt="">
@@ -31,7 +31,9 @@
         <img src="img/icon-login.svg" width="15" height="15" alt="">
         <button type="button">Вход</button>
       </li>
-      <li><button type="button">Регистрация</button></li>
+      <li>
+        <button type="button">Регистрация</button>
+      </li>
     </ul>
     <nav>
       <ul>
@@ -94,7 +96,7 @@
       <div>
 
         <article>
-            <img src="img/Perforatorbfg9.jpg" alt="Перфоратор BOSCH BFG 9000">
+            <img src="img/perforatorbfg9.jpg" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 9000></h3>
           <span>32500 Р.</span>
           <span>25500</span>
@@ -103,7 +105,7 @@
         </article>
 
         <article>
-            <img src="img/Perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH BFG 3000></h3>
           <span>22500 Р.</span>
           <span>15500</span>
@@ -112,7 +114,7 @@
         </article>
 
         <article>
-            <img src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <span>25500</span>
@@ -121,7 +123,7 @@
         </article>
 
         <article>
-            <img src="img/Perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
+            <img src="img/perforatorbfg2.jpg" alt="Перфоратор BOSCH BFG 2000">
             <img src="img/newflag.png" width="60" height="59" alt="Новое">
           <h3>Перфоратор BOSCH BFG 2000 </h3>
           <span>12500</span>
@@ -135,15 +137,15 @@
     <section>
       <h2>Популярные производители</h2>
       <a href="#">Все производители</a>
-      <figure class="Manufacturers">
+      <figure class="manufacturers">
           <img src="img/bosch.jpg" width="126" height="37" alt="bosch">
-          <img src="img/Makita.jpg" width="123" height="40" alt="Makita">
-          <img src="img/DeWALT.jpg" width="146" height="44" alt="DeWALT">
-          <img src="img/Интерскол.jpg" width="200" height="88" alt="Интерскол">
-          <img src="img/Hitachi.jpg" width="169" height="31" alt="Hitachi">
-          <img src="img/LG.jpg" width="121" height="73" alt="LG">
-          <img src="img/AEG.jpg" width="151" height="96" alt="AEG">
-          <img src="img/Metabo.jpg" width="204" height="69" alt="Metabo">
+          <img src="img/makita.jpg" width="123" height="40" alt="Makita">
+          <img src="img/dewalt.jpg" width="146" height="44" alt="DeWALT">
+          <img src="img/interscall.jpg" width="200" height="88" alt="Интерскол">
+          <img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi">
+          <img src="img/lg.jpg" width="121" height="73" alt="LG">
+          <img src="img/aeg.jpg" width="151" height="96" alt="AEG">
+          <img src="img/metabo.jpg" width="204" height="69" alt="Metabo">
       </figure>
     </section>
 
@@ -187,7 +189,7 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами,
         заехав в наш офис:</p>
-      <img src="img/map-steeat.jpg" width="300" height="161" alt="Большая Конюшенная ул., 19">
+      <img src="img/map-streat.jpg" width="300" height="161" alt="Большая Конюшенная ул., 19">
       <button type="button">Заблудились?Напишите нам!</button>
     </section>
   </main>
@@ -220,15 +222,15 @@
       <ul>
         <li>
           <a href="#"></a>
-          <img src="img/vk-icon.svg" width="15" height="15" alt="">
+          <img src="img/icon-vk.svg" width="15" height="15" alt="">
         </li>
         <li>
           <a href="#"></a>
-          <img src="img/fb-icon.svg" width="15" height="15" alt="">
+          <img src="img/icon-fb.svg" width="15" height="15" alt="">
         </li>
         <li>
           <a href="#"></a>
-          <img src="img/insta-icon.svg" width="15" height="15" alt="">
+          <img src="img/icon-insta.svg" width="15" height="15" alt="">
         </li>
       </ul>
       <p>Обратная связь:</p>
